# msys-shell-pyside

./: .msys-packageignore  README.md  manifest.json  pyproject.toml
files/share/i18n/: catalog.json
msys_shell_pyside/: __init__.py  adaptive.py  demo_app.py  intent_chooser.py  launcher.py  localization.py  navigation_gesture.py  notification_center.py  preferences.py  screen_shield.py  status_agent.py  task_switcher.py  tk_roles.py  transition_presenter.py  window_policy.py
scripts/: benchmark_notification_center.py
tests/: test_adaptive.py  test_demo_app.py  test_intent_chooser.py  test_launcher.py  test_localization.py  test_manifest.py  test_navigation_gesture.py  test_navigation_layout.py  test_notification_center.py  test_preferences.py  test_screen_shield.py  test_status_agent.py  test_task_switcher.py  test_tk_window_identity.py  test_transition_presenter.py  test_ui_fonts.py
