[project]
name = "msys-shell-pyside"
version = "0.1.11"
description = "Reference PySide shell providers for MSYS"
requires-python = ">=3.10"
dependencies = ["msys-sdk>=0.1.4"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "../msys-sdk"]
